# xyeng

./: .gitmodules  CMakeLists.txt
api/: CMakeLists.txt
api/include/xy/: xy.h
api/src/: common.h  xy.cpp
api/src/core/: window.cpp  window.h
engine/: CMakeLists.txt
engine/src/: main.cpp
